refactoring generale, modifica classe Note

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=dbNotesApp
 spring.datasource.username= userNotes
-spring.datasource.password= Password123_!
+spring.datasource.password= 718kA0'J2m|9
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto= update
-<
+server.port = 8081
